Basic setup of a successful heartbeat instance.

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,11 @@
-HEARTBEAT_IMAGE=docker.elastic.co/beats/metricbeat:7.13.3
-ELASTICSEARCH_HOSTS=http://10.1.19.1:9200
-ELASTICSEARCH_USERNAME=
-ELASTICSEARCH_PASSWORD=
+# General Settings
+VERSION=7.15.0
+CERTS_DIR=/usr/share/elasticsearch/config/certificates
 
+# Authentication
+HEARTBEAT_WRITER_PASSWORD=
+HEARTBEAT_SETUP_PASSWORD=
+
+# Networking
+ELASTICSEARCH_HOST=https://10.1.19.1:9200
+KIBANA_HOST=https://10.1.19.1:9201
