--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
-version: '3.2'
+version: '3.9'
 
 services:
-    heartbeat:
-        image: ${HEARTBEAT_IMAGE}
-        container_name: heartbeat
-        network_mode: host
-        environment:
-            - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_HOSTS}
-            - ELASTICSEATCH_USERNAME=${ELASTICSEARCH_USERNAME}
-            - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
-        volumes:
-            - ./configs/heartbeat.docker.yml:/usr/share/heartbeat/heartbeat.yml:ro
+  heartbeat:
+    image: beats/heartbeat:${VERSION}
+    container_name: heartbeat
+    network_mode: host
+    env_file: .env
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 300M
+    volumes:
+      - certs:$CERTS_DIR
+      - ./configs/heartbeat.docker.yml:/usr/share/heartbeat/heartbeat.yml:ro
+      - ./configs/monitors.d:/usr/share/heartbeat/monitors.d:ro
+
+volumes:
+  certs:
+    external: true
+    name: elastic-certs
