Creating directories for each of the monitor types respectively to further organize the config files.

--- a/configs/heartbeat.docker.yml
+++ b/configs/heartbeat.docker.yml
@@ -1,6 +1,6 @@
 # heartbeat.yml
 heartbeat.config.monitors:
-  path: /usr/share/heartbeat/monitors.d/*.yml
+  path: /usr/share/heartbeat/monitors.d/*/*.yml
   reload.enabled: true
   reload.period: 10s
 
